--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ajaykumarsalindra.github.io/kinhub_project",
   "name": "agency-website",
   "version": "0.1.0",
   "private": true,
@@ -15,12 +16,15 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.3",
     "web-vitals": "^3.5.0"
-  },
+  }, 
+  
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject"    
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
+
+
